# outreach-ai

./: .env.example  .gitignore  CNAME  Dockerfile  README.md  app.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/api/routes/: auth_google.py  campaigns.py  health.py
app/core/: celery_app.py  config.py
app/db/: base.py  session.py
app/models/: campaign.py  gmail_account.py  recipient.py  user.py
app/schemas/: campaign.py  gmail.py
app/security/: crypto.py
app/services/: gmail_service.py  tasks.py
src/outreach_ai/: analyzer.py  app.py  cli.py  compliance.py  dashboard.py  db.py  models.py  personalization.py  scheduler.py  senders.py  utils.py  warmup.py
templates/: intro_email.html
tests/: test_smoke.py
